--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^2.20.25",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
