--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.20.25",
+    "gatsby-plugin-netlify": "^2.3.0",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.0",
     "gatsby-plugin-react-svg": "^3.0.0",
